refactor: se cambio el metodo get